2007-01-03 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-gtkplug/gtkvrmlbrowser.cpp
	(browser::do_get_resource(const std::string &)): Check the return
	status given by g_io_channel_write_chars and g_io_channel_flush;
	set badbit and bail if there's a problem.

2007-01-03 Braden McDaniel  <braden@endoframe.com>

	Factored command and request channel shutdown into separate
	functions.

	* src/openvrml-gtkplug/main.cpp
	(command_channel_shutdown(GIOChannel *)): Added function to shut
	down the command channel.
	(request_channel_shutdown(GIOChannel *)): Added function to shut
	down the request channel.
	(main(int, char *[])): Use scope_guard to remove any returned
	GError; use scope_guard to call shutdown functions for the command
	and request channels.

2007-01-03 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::root_scene_loader::operator()() const): Don't
	lock the browser-wide mutex here.

2007-01-03 Braden McDaniel  <braden@endoframe.com>

	On second thought, retaining copies in the guard_impl is really
	the only safe thing to do (in the event someone wants to invoke
	make_guard with temporaries). The case where this is not desirable
	can be solved by using boost::ref in the call to make_guard.

	* mozilla-plugin/src/openvrml.cpp
	(plugin_instance::set_window(NPWindow &)): Use boost::ref instead
	of explicitly giving a reference template parameter to make_guard.
	* src/libopenvrml/private.h
	(openvrml_::scope_guard_impl1): Store a copy to the callback
	function parameter.
	(openvrml_::scope_guard_impl3): Store a copy to the callback
	function parameter.
	(openvrml_::obj_scope_guard_impl1): Store a copy to the callback
	function parameter.

2007-01-03 Braden McDaniel  <braden@endoframe.com>

	* m4/jdk.m4: Removed obsolete commented-out macro.

2007-01-01 Braden McDaniel  <braden@endoframe.com>

	Factored platform-specific code in text_node::update_face into its
	own function.
